--- a/CONWAY_2/makefile
+++ b/CONWAY_2/makefile
@@ -3,7 +3,7 @@
 ########################################################################### 
 
 CC = mpicc
-CCFLAGS = -g -lm
+CCFLAGS = -g -lm -lmpi
 LDFLAGS= -lm
 ifeq ($(DEBUG),on)
 	CCFLAGS += -DDEBUG
